Remove commons-io and other code tidy-ups